<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cryptocurrency_databinding_home"
            type="com.example.mycrypto.ui.home.HomeViewModel" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.example.mycrypto.ui.home.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:foregroundGravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview_total_holdings"
                    style="@style/AutoSizeText"
                    android:gravity="center"
                    android:text="@string/default_date_time"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@+id/textview_total_value_change_24h"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/default_date_time" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview_total_holdings_change_24h_label"
                    style="@style/AutoSizeText"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_holdings_change_24h_label"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@+id/textview_separator_value"
                    app:layout_constraintEnd_toStartOf="@+id/textview_total_value_change_24h"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview_total_value_change_24h"
                    style="@style/AutoSizeText"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_holdings_change_24h"
                    android:textAlignment="center"
                    android:textColor="@color/golden"
                    android:textDirection="firstStrongLtr"
                    app:layout_constraintBottom_toTopOf="@+id/textview_separator_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textview_total_holdings_change_24h_label"
                    tools:background="@color/black"
                    tools:text="@string/total_holdings_change_24h_default" />

                <TextView
                    android:id="@+id/textview_separator_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"></TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardview_height_home"
        android:layout_marginStart="@dimen/cardview_outer_margin"
        android:layout_marginTop="@dimen/cardview_outer_margin"
        android:layout_marginEnd="@dimen/cardview_outer_margin"
        app:cardBackgroundColor="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/cardview_inner_margin"
            android:layout_marginEnd="@dimen/cardview_inner_margin"
            android:paddingTop="@dimen/cardview_outer_margin"
            android:paddingBottom="@dimen/cardview_outer_margin">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/cardview_list_item_image_width_height" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@dimen/guide_right_percent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@dimen/guide_left_percent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ranking_indicator_symbol"
                style="@style/MainListColumnNamesText"
                android:lines="1"
                android:text="@string/ranking_indicator_symbol"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_Crypto_coin_name_symbol"
                style="@style/MainListColumnNamesText"
                android:layout_marginStart="@dimen/cardview_outer_margin"
                android:layout_marginEnd="@dimen/cardview_between_margin"
                android:text="@string/text_Crypto_coin_name_symbol"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_middle"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_price_symbol"
                style="@style/MainListColumnNamesText"
                android:layout_marginStart="@dimen/cardview_between_margin"
                android:layout_marginEnd="@dimen/cardview_between_margin"
                android:text="@string/text_price_symbol"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_middle"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_time_variance_indicator"
                style="@style/MainListColumnNamesText"
                android:layout_marginStart="@dimen/cardview_between_margin"
                android:lines="3"
                android:text="@string/text_time_variance_indicator"
                android:textAlignment="viewEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline_right"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorRed"
                android:paddingBottom="@dimen/cardview_height_home"
                android:visibility="gone"
                />
            <LinearLayout
                android:id="@+id/layout_fragment_main_list_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@color/black"
                android:visibility="visible">



                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_primary_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_watchlist"
                    android:textColor="@color/colorWhite"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_secondary_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorRed"
                    android:text="@string/add_items_watchlist"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />



            </LinearLayout>

        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>
</layout>